remove overflow and fix footer for mobile.

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 @layer utilities {
